--- a/Views/TodayPage.xaml
+++ b/Views/TodayPage.xaml
@@ -3,86 +3,103 @@
     x:Class="BonjourDailyTips.Views.TodayPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="今天"
+    xmlns:btctl="clr-namespace:BonjourDailyTips.Controls"
+    xmlns:todayvm="clr-namespace:BonjourDailyTips.ViewModels"
+    xmlns:converters="clr-namespace:BonjourDailyTips.Helpers.Converters"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    Title=""
     Background="{StaticResource PinkBackGroundGradientBrush}">
+    <ContentPage.BindingContext>
+        <todayvm:TodayPageViewModel />
+    </ContentPage.BindingContext>
+    <ContentPage.Resources>
+        <converters:StringToImageSourceConverter x:Key="StringToImageSourceConverter" />
+    </ContentPage.Resources>
+    <Grid IgnoreSafeArea="{OnPlatform Android=False, iOS=True}">
+        <ScrollView>
 
-    <ScrollView>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-
-            <StackLayout Orientation="Vertical">
-                <Label
-                    Margin="18,0,0,0"
-                    FontAttributes="Bold"
-                    FontSize="Medium"
-                    Text="2023年x月x日，晴"
-                    TextColor="White" />
-
-                <Label
-                    Margin="18,0,0,0"
-                    FontAttributes="Bold"
-                    FontSize="36"
-                    HorizontalOptions="Start"
-                    Text="晚上好! Logic"
-                    TextColor="White"
-                    VerticalOptions="Center" />
-                <Label
-                    Margin="18,8,0,0"
-                    FontSize="16"
-                    Text="🌈博学不穷，笃行不倦！"
-                    TextColor="#99FFFFFF" />
-            </StackLayout>
-            <Border Grid.Row="1" Padding="10" Margin="8,8,8,8" >
-                <Border.StrokeShape>
-                    <RoundRectangle CornerRadius="8" StrokeThickness="0.5" />
-                </Border.StrokeShape>
-                <Image Aspect="AspectFill" Source="https://cn.bing.com//th?id=OHR.PlayfulHumpback_ZH-CN2241016258_1920x1080.jpg" />
-            </Border>
-            <Grid Grid.Row="2" Padding="18">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+            <Grid Margin="0,26,0,0">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Label Text="重要日" 
-                       Margin="0,8,0,0"
-                       FontSize="16"
-                    
-                    TextColor="White"/>
-                <Label
-                    Grid.Row="1"
-                    Margin="0,8,0,0"
-                    FontSize="16"
-                    Text="💕 This is a SAMPLE Text : xxxDay"
-                    TextColor="White" />
-                <Label                    
-                    Margin="0,18,0,0"
-                    Grid.Row="2"
-                    FontSize="16"
-                    Text="💕 This is a SAMPLE Text : xxxDay"
-                    TextColor="White" />
-                <Label LineBreakMode="WordWrap"
-                       Text="🔤 Youth is not afraid of the long years there is still glory in the other side."
-                       Margin="0,18,0,0"
-                       Grid.Row="3"
-                       MaxLines="-1"
-                       FontSize="16"/>
-            </Grid>
 
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
+                <StackLayout Orientation="Vertical">
+                    <Label
+                        Margin="18,0,0,0"
+                        FontAttributes="Bold"
+                        FontSize="Medium"
+                        Text="{Binding TodayDate, StringFormat='{yyyy年mm月dd日}'}"
+                        TextColor="White" />
+
+                    <Label
+                        Margin="18,0,0,0"
+                        FontAttributes="Bold"
+                        FontSize="36"
+                        HorizontalOptions="Start"
+                        Text="晚上好! Logic"
+                        TextColor="White"
+                        VerticalOptions="Center" />
+                    <Label
+                        Margin="18,8,0,0"
+                        FontSize="16"
+                        Text="🌈博学不穷，笃行不倦！"
+                        TextColor="#99FFFFFF" />
+                </StackLayout>
+                <Border
+                    Grid.Row="1"
+                    Margin="8,8,8,8"
+                    Padding="10">
+                    <Border.StrokeShape>
+                        <RoundRectangle
+                            Background="{StaticResource WhiteBrush}"
+                            CornerRadius="8"
+                            StrokeThickness="0.5" />
+                    </Border.StrokeShape>
+                    <Image Aspect="AspectFit" Source="{Binding BingPicUrl,Mode=OneWay,Converter={StaticResource StringToImageSourceConverter}}" />
+                </Border>
+                <ScrollView Grid.Row="2" Orientation="Horizontal">
+                    <Grid Padding="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Label
+                            Margin="0,8,0,0"
+                            FontSize="16"
+                            Text="重要日"
+                            TextColor="White" />
+                        <btctl:DayCounterControl Grid.Row="2" />
+                        <Label
+                            Grid.Row="2"
+                            Margin="0,18,0,0"
+                            FontSize="16"
+                            Text="💕 This is a SAMPLE Text : xxxDay"
+                            TextColor="White" />
+                        <Label
+                            Grid.Row="3"
+                            Margin="0,18,0,0"
+                            FontSize="16"
+                            LineBreakMode="WordWrap"
+                            Text="🔤 Youth is not afraid of the long years there is still glory in the other side."
+                            WidthRequest="{OnIdiom Phone=380}" />
+                    </Grid>
+                </ScrollView>
+
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                </Grid>
             </Grid>
-        </Grid>
-    </ScrollView>
+        </ScrollView>
+    </Grid>
 </ContentPage>
